crates/brasa_parser/tests/snapshots/precedence__trailing_do_with_parens.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"f(a) do |x|\\n  puts x\\nend\")"
---
Call
  Ident(f)
  Ident(a)
  Lambda(x)
    Call
      Ident(puts)
      Ident(x)
