crates/brasa_parser/tests/snapshots/precedence__trailing_do_without_parens.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"recv.each do |x|\\n  puts x\\nend\")"
---
Call
  Field(each)
    Ident(recv)
  Lambda(x)
    Call
      Ident(puts)
      Ident(x)
