crates/brasa_parser/tests/snapshots/precedence__tuple_across_newlines.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"let p = (\\n  1,\\n  2,\\n)\")"
---
Let p
  TupleLit
    Int(1)
    Int(2)
