crates/brasa_parser/tests/snapshots/precedence__tuple_elements_are_full_expressions.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"let p = (1 + 2, f(x))\")"
---
Let p
  TupleLit
    Binary(+)
      Int(1)
      Int(2)
    Call
      Ident(f)
      Ident(x)
