crates/brasa_parser/tests/snapshots/precedence__tuple_one_element_needs_its_comma.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"let p = (1,)\")"
---
Let p
  TupleLit
    Int(1)
