crates/brasa_parser/tests/snapshots/precedence__tuple_trailing_comma.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"let p = (1, 2,)\")"
---
Let p
  TupleLit
    Int(1)
    Int(2)
