crates/brasa_parser/tests/snapshots/precedence__tuple_two_elements.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"let p = (1, \\\"a\\\")\")"
---
Let p
  TupleLit
    Int(1)
    StringLit
      Text(raw=false) "a"
